+Fix crash that could occur when trying to retrieve binary data from clipboard to
update clipboard ring.
+Fix crash that could happen when replace in selection action finds no matches.
+Fix crash that could occur when starting Editra again immediately after closing
another running instance due to zombie IPC thread.
+Fix crash that could occur in vi emulation due to bad command mapping.

#-----------------------------------------------------------------------------#

VERSION 0.6.99
DATE 03/17/2012
48th Alpha Release

NEWS:
Haven't had much time to work on Editra lately so though I would release the
changes that have been integrated since previous release. Main improvements
in this release are better handling of large files, improved Unicode handling,
and improved find performance. See changelog below for more details.


NEW: [features/improvements]
+Major performance improvements to Replace All action
+Backup file suffix can be customized (patch from dkuhlman)
+Moderate improvements to performance of working with large files.
+Improved support for R programming language.
+SingleInstanceChecker temp file moved from home directory to system temp directory.
+Add option to preferences for configuring the preferred caret width (1-4 pixels).
+Support Block caret for Vi emulation mode (requires wxPython 2.9)

LIBRARY:
+Add InfoBar control for providing simple information messages without having to
show a modal dialog.

BUG FIXES:
+Fix minor control sizing issue in ControlBars created by ControlBox.CreateControlBar
on GTK/MSW.
+Fix issue with Unicode normalization in search.
+Fix in buffer search operations to work better for Unicode by working around
issues where StyledTextCtrl expects UTF-8 byte offsets for some methods (SetSelection,
GetSelection, ...)
+Fix saved search flags not being propagated properly after application restart.
+Fix Calltip shortcut not working correctly due to incorrect lookup string being