@@ -28,6 +28,8 @@ update clipboard ring.
 +Fix crash that could occur when starting Editra again immediately after closing
 another running instance due to zombie IPC thread.
 +Fix crash that could occur in vi emulation due to bad command mapping.
++Fix crashes that could occur when loading plugins that throw errors during
+creation.
 
 #-----------------------------------------------------------------------------#
 
